# app/Http/Requests/Brand/UpdateBrandRequest.php
@@ -18,10 +18,7 @@ class UpdateBrandRequest extends FormRequest
             'name' => ['sometimes', 'string', 'max:255'],
             'slug' => ['nullable', 'string', 'max:255', Rule::unique('brands')->ignore($this->brand)],
             'is_active' => ['nullable', 'boolean'],
-            'is_featured' => ['nullable', 'boolean'],
             'featured_order' => ['nullable', 'integer'],
-            'is_most_searched' => ['nullable', 'boolean'],
-            'most_searched_order' => ['nullable', 'integer'],
         ];
     }
 }
