# app/Http/Resources/BrandResource.php
@@ -14,10 +14,7 @@ use OpenApi\Attributes as OA;
         new OA\Property(property: "name", type: "string"),
         new OA\Property(property: "slug", type: "string"),
         new OA\Property(property: "is_active", type: "boolean"),
-        new OA\Property(property: "is_featured", type: "boolean"),
         new OA\Property(property: "featured_order", type: "integer"),
-        new OA\Property(property: "is_most_searched", type: "boolean"),
-        new OA\Property(property: "most_searched_order", type: "integer"),
         new OA\Property(property: "created_at", type: "string", format: "date-time"),
         new OA\Property(property: "updated_at", type: "string", format: "date-time"),
     ]
@@ -31,10 +28,7 @@ class BrandResource extends JsonResource
             'name' => $this->name,
             'slug' => $this->slug,
             'is_active' => $this->is_active,
-            'is_featured' => $this->is_featured,
             'featured_order' => $this->featured_order,
-            'is_most_searched' => $this->is_most_searched,
-            'most_searched_order' => $this->most_searched_order,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
         ];
