# storage/api-docs/api-docs.json
@@ -433,28 +433,7 @@
                         }
                     },
                     {
-                        "name": "is_featured",
-                        "in": "query",
-                        "schema": {
-                            "type": "boolean"
-                        }
-                    },
-                    {
-                        "name": "is_most_searched",
-                        "in": "query",
-                        "schema": {
-                            "type": "boolean"
-                        }
-                    },
-                    {
                         "name": "featured_order",
-                        "in": "query",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "most_searched_order",
                         "in": "query",
                         "schema": {
                             "type": "integer"
@@ -513,16 +492,7 @@
                                     "is_active": {
                                         "type": "boolean"
                                     },
-                                    "is_featured": {
-                                        "type": "boolean"
-                                    },
                                     "featured_order": {
-                                        "type": "integer"
-                                    },
-                                    "is_most_searched": {
-                                        "type": "boolean"
-                                    },
-                                    "most_searched_order": {
                                         "type": "integer"
                                     }
                                 },
@@ -621,16 +591,7 @@
                                     "is_active": {
                                         "type": "boolean"
                                     },
-                                    "is_featured": {
-                                        "type": "boolean"
-                                    },
                                     "featured_order": {
-                                        "type": "integer"
-                                    },
-                                    "is_most_searched": {
-                                        "type": "boolean"
-                                    },
-                                    "most_searched_order": {
                                         "type": "integer"
                                     }
                                 },
@@ -708,16 +669,7 @@
                                                 "id": {
                                                     "type": "integer"
                                                 },
-                                                "is_featured": {
-                                                    "type": "boolean"
-                                                },
                                                 "featured_order": {
-                                                    "type": "integer"
-                                                },
-                                                "is_most_searched": {
-                                                    "type": "boolean"
-                                                },
-                                                "most_searched_order": {
                                                     "type": "integer"
                                                 }
                                             },
@@ -1345,54 +1297,6 @@
                 }
             }
         },
-        "/api/brands/featured": {
-            "get": {
-                "tags": [
-                    "Frontend - Brands"
-                ],
-                "summary": "Get featured brands for home page",
-                "operationId": "88547ae6a70d145fa469913a9bc5b369",
-                "responses": {
-                    "200": {
-                        "description": "List of featured brands",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/BrandResource"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/brands/most-searched": {
-            "get": {
-                "tags": [
-                    "Frontend - Brands"
-                ],
-                "summary": "Get most searched brands for home page",
-                "operationId": "bd5b8bb8d16eda336b0f412cf56f8a3c",
-                "responses": {
-                    "200": {
-                        "description": "List of most searched brands",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/BrandResource"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/brands": {
             "get": {
                 "tags": [
@@ -1564,16 +1468,7 @@
                     "is_active": {
                         "type": "boolean"
                     },
-                    "is_featured": {
-                        "type": "boolean"
-                    },
                     "featured_order": {
-                        "type": "integer"
-                    },
-                    "is_most_searched": {
-                        "type": "boolean"
-                    },
-                    "most_searched_order": {
                         "type": "integer"
                     },
                     "created_at": {
